# QT_Calibration3D

./: CMakeLists.txt  Main.qml  README.md  filecontent.cpp  filecontent.h  main.cpp  qtquickcontrols2.conf
qml/: DataListView.qml  DataListViewItem.qml  DataViewItem.qml  MainLayOut.qml  MainShowView.qml
qml/Adjust/: AdjustView.qml  SpinBoxItem.qml
qml/Labels/: BaseLabel.qml  FontGrade.qml
qml/core/: Core.qml  FileContentTool.qml
